# trove-classifiers-cli

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
tests/: test_trove_classifiers_cli.py
trove_classifiers_cli/: cli.py
