[tool.poetry]
name = "trove-classifiers-cli"
version = "0.1.1"
description = ""
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tddschn/trove-classifers-cli"
repository = "https://github.com/tddschn/trove-classifers-cli"
classifiers = [
	"Topic :: Utilities"
]
keywords = ["cli", "trove-classifiers"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/trove-classifers-cli/issues"

[tool.poetry.scripts]
trove-classifers = "trove_classifiers_cli.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
trove-classifiers = "^2022.4.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = "^0.10.2"
yapf = "^0.32.0"
better-exceptions = "^0.3.3"
bump2version = "^1.0.1"
icecream = "^2.1.2"
pyinstrument = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
